<resources>
    <string name="app_name">To do list</string>
    <string name="tasks">Tarefas</string>
    <string name="create_task">Criar Tarefa</string>
    <string name="title_task">Título</string>
    <string name="description_task">Descrição</string>
    <string name="date_task">Data</string>
    <string name="time_task">Hora</string>
    <string name="cancel_task">Cancelar</string>
    <string name="description_button_new_task">Nova Tarefa</string>
    <string name="action_menu_edit">Editar</string>
    <string name="action_menu_delete">Excluir</string>
    <string name="empty_state_task">Ops, você não possui tarefas!</string>
</resources>